--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-10-base/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/gcc-10-base/copyright-detailed.expected.yml
@@ -18,25 +18,24 @@ declared_license_expression: gpl-3.0-plus WITH gcc-exception-3.1 AND gpl-3.0-plu
 declared_license_expression_spdx: GPL-3.0-or-later WITH GCC-exception-3.1 AND GPL-3.0-or-later
   WITH GCC-exception-3.1 AND BSD-3-Clause AND NCSA AND MIT AND MIT AND GFDL-1.2-only AND GCC-exception-3.1
   AND LGPL-2.0-or-later AND LGPL-2.1-or-later AND LGPL-2.1-or-later AND LGPL-2.1-or-later AND
-  LicenseRef-scancode-public-domain AND LGPL-2.1-or-later AND LGPL-2.1-or-later AND LicenseRef-scancode-sunpro
-  AND BSD-3-Clause AND GPL-2.0-or-later AND (Artistic-1.0-Perl OR GPL-1.0-only) AND Zlib AND
-  LicenseRef-scancode-d-zlib AND MIT AND GPL-3.0-or-later WITH GCC-exception-3.1 AND GPL-3.0-or-later
-  AND GFDL-1.3-or-later AND LGPL-2.1-or-later WITH GCC-exception-3.1 AND GPL-3.0-or-later WITH
-  GCC-exception-3.1 AND (GPL-3.0-only AND LGPL-2.1-only AND LGPL-3.0-only) AND (GPL-3.0-only
-  AND LGPL-2.1-only AND LGPL-3.0-only) AND (LGPL-2.0-only AND GPL-3.0-only) AND GPL-3.0-or-later
-  AND LicenseRef-scancode-gnu-emacs-gpl-1988 AND (GPL-3.0-only AND LGPL-2.1-only) AND (GPL-2.0-or-later
-  AND GPL-3.0-or-later) AND LGPL-2.1-or-later WITH GCC-exception-3.1 AND (LGPL-2.0-or-later
-  AND GPL-1.0-or-later) AND LicenseRef-scancode-bsla-no-advert AND LicenseRef-scancode-bsla
-  AND BSD-4-Clause-UC AND BSD-3-Clause AND BSD-4-Clause-UC AND LicenseRef-scancode-flex-2.5
+  LicenseRef-scancode-public-domain AND LGPL-2.1-or-later AND LGPL-2.1-or-later AND SunPro AND
+  BSD-3-Clause AND GPL-2.0-or-later AND (Artistic-1.0-Perl OR GPL-1.0-only) AND Zlib AND LicenseRef-scancode-d-zlib
+  AND MIT AND GPL-3.0-or-later WITH GCC-exception-3.1 AND GPL-3.0-or-later AND GFDL-1.3-or-later
+  AND LGPL-2.1-or-later WITH GCC-exception-3.1 AND GPL-3.0-or-later WITH GCC-exception-3.1 AND
+  (GPL-3.0-only AND LGPL-2.1-only AND LGPL-3.0-only) AND (GPL-3.0-only AND LGPL-2.1-only AND
+  LGPL-3.0-only) AND (LGPL-2.0-only AND GPL-3.0-only) AND GPL-3.0-or-later AND LicenseRef-scancode-gnu-emacs-gpl-1988
+  AND (GPL-3.0-only AND LGPL-2.1-only) AND (GPL-2.0-or-later AND GPL-3.0-or-later) AND LGPL-2.1-or-later
+  WITH GCC-exception-3.1 AND (LGPL-2.0-or-later AND GPL-1.0-or-later) AND LicenseRef-scancode-bsla-no-advert
+  AND BSD-4.3TAHOE AND BSD-4-Clause-UC AND BSD-3-Clause AND BSD-4-Clause-UC AND LicenseRef-scancode-flex-2.5
   AND BSD-4-Clause-UC AND (GPL-3.0-only AND GPL-2.0-only AND LGPL-3.0-or-later WITH LicenseRef-scancode-cygwin-exception-lgpl-3.0-plus
   AND LicenseRef-scancode-other-copyleft AND LicenseRef-scancode-other-permissive) AND LicenseRef-scancode-x11-lucent
-  AND LicenseRef-scancode-amd-historical AND LicenseRef-scancode-sunpro AND LicenseRef-scancode-osf-1990
-  AND LicenseRef-scancode-nilsson-historical AND LicenseRef-scancode-newlib-historical AND BSD-3-Clause
-  AND LicenseRef-scancode-amd-historical AND BSD-3-Clause AND BSD-2-Clause AND BSD-2-Clause
-  AND BSD-2-Clause AND LicenseRef-scancode-x11-hanson AND BSD-2-Clause AND BSD-3-Clause AND
-  LGPL-2.0-or-later AND LGPL-2.1-or-later AND LGPL-2.0-or-later AND LGPL-2.0-or-later AND LicenseRef-scancode-intel-osl-1993
-  AND LicenseRef-scancode-osf-1990 AND Spencer-94 AND BSD-2-Clause AND BSD-2-Clause AND BSD-2-Clause
-  AND BSD-3-Clause AND LicenseRef-scancode-unicode AND LicenseRef-scancode-unicode AND LGPL-2.1-or-later
+  AND LicenseRef-scancode-amd-historical AND SunPro AND HP-1986 AND LicenseRef-scancode-nilsson-historical
+  AND LicenseRef-scancode-newlib-historical AND BSD-3-Clause AND LicenseRef-scancode-amd-historical
+  AND BSD-3-Clause AND BSD-2-Clause AND BSD-2-Clause AND BSD-2-Clause AND LicenseRef-scancode-x11-hanson
+  AND BSD-2-Clause AND BSD-3-Clause AND LGPL-2.0-or-later AND LGPL-2.1-or-later AND LGPL-2.0-or-later
+  AND LGPL-2.0-or-later AND LicenseRef-scancode-intel-osl-1993 AND HP-1986 AND Spencer-94 AND
+  BSD-2-Clause AND BSD-2-Clause AND BSD-2-Clause AND BSD-3-Clause AND LicenseRef-scancode-unicode
+  AND LicenseRef-scancode-unicode AND LGPL-2.1-or-later
 other_license_expression:
 other_license_expression_spdx:
 license_detections:
