--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libnettle8/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libnettle8/copyright-detailed.expected.yml
@@ -189,8 +189,8 @@ other_license_expression_spdx: ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GP
   AND GPL-2.0-or-later)) AND (GPL-3.0-or-later AND GPL-3.0-or-later WITH LicenseRef-scancode-tex-exception)
   AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later))
   AND ((LGPL-3.0-or-later AND LGPL-3.0-or-later) OR (GPL-2.0-or-later AND GPL-2.0-or-later))
-  AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND LicenseRef-scancode-autoconf-simple-exception-2.0
-  AND LicenseRef-scancode-public-domain AND (GPL-2.0-only AND GPL-2.0-only) AND FSFAP
+  AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND Autoconf-exception-generic AND LicenseRef-scancode-public-domain
+  AND (GPL-2.0-only AND GPL-2.0-only) AND FSFAP
 license_detections: []
 other_license_detections:
   - license_expression: lgpl-2.0-plus
