Add new license detection rules
These are mostly seen in some Debian copyright files

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/licensedcode/data/datadriven/lic1/godot2_COPYRIGHT.txt.yml
+++ b/tests/licensedcode/data/datadriven/lic1/godot2_COPYRIGHT.txt.yml
@@ -1,4 +1,5 @@
 license_expressions:
+  - mit
   - zlib
   - unknown-license-reference
   - public-domain
@@ -61,7 +62,6 @@ license_expressions:
   - mit
   - mit
   - zlib
-  - bsd-new
   - apache-2.0
   - bitstream
   - bitstream
