Fix unordered lists bug
Looks like there was an issue in docutils/sphinx-rtd-theme so we
needed to downgrade to docutils < 0.17 for the unordered lists to
be rendered again properly.

Reference: https://github.com/readthedocs/sphinx_rtd_theme/issues/1115
Signed-off-by: Ayan Sinha Mahapatra <ayansmahapatra@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -136,9 +136,10 @@ testing =
     pytest-rerunfailures
 
 docs =
-    Sphinx >= 3.3.1
-    sphinx-rtd-theme >= 0.5.0
-    doc8 >= 0.8.1
+    Sphinx >= 4.3.0
+    sphinx_rtd_theme >= 0.5.1
+    docutils < 0.17
+    doc8
 
 # linux-only package handling
 packages =
