--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ testing =
     pytest >= 6, != 7.0.0
     pytest-xdist >= 2
     aboutcode-toolkit >= 7.0.2
+    pycodestyle >= 2.8.0
     twine
     black
     isort
