--- a/setup.cfg
+++ b/setup.cfg
@@ -153,6 +153,7 @@ console_scripts =
     scancode = scancode.cli:scancode
     scancode-reindex-licenses = licensedcode.reindex:reindex_licenses
     scancode-license-data = licensedcode.license_db:dump_scancode_license_data
+    regen-package-docs = packagedcode.regen_package_docs:regen_package_docs
 
 # These are configurations for ScanCode plugins as setuptools entry points.
 # Each plugin entry hast this form:
