--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/c/clamav/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/c/clamav/stable_copyright-detailed.expected.yml
@@ -56,9 +56,9 @@ other_license_expression: (gpl-2.0 AND gpl-2.0) AND gpl-2.0 AND (gpl-2.0 AND ope
 other_license_expression_spdx: (GPL-2.0-only AND GPL-2.0-only) AND GPL-2.0-only AND (GPL-2.0-only
   AND LicenseRef-scancode-openssl-exception-gpl-3.0-plus AND GPL-2.0-only) AND GPL-2.0-only
   AND (GPL-2.0-or-later AND GPL-2.0-or-later) AND GPL-2.0-only AND (GPL-2.0-or-later AND GPL-2.0-or-later)
-  AND GPL-2.0-only AND (GPL-2.0-or-later AND Autoconf-exception-generic AND GPL-2.0-only) AND
-  GPL-2.0-only AND (GPL-3.0-or-later WITH LicenseRef-scancode-autoconf-simple-exception AND
-  GPL-3.0-only) AND GPL-3.0-only AND (GPL-2.0-or-later WITH Libtool-exception AND GPL-2.0-only)
+  AND GPL-2.0-only AND (GPL-2.0-or-later AND LicenseRef-scancode-autoconf-simple-exception-2.0
+  AND GPL-2.0-only) AND GPL-2.0-only AND (GPL-3.0-or-later WITH LicenseRef-scancode-autoconf-simple-exception
+  AND GPL-3.0-only) AND GPL-3.0-only AND (GPL-2.0-or-later WITH Libtool-exception AND GPL-2.0-only)
   AND GPL-2.0-only AND (LGPL-2.0-or-later WITH Libtool-exception AND LGPL-2.0-or-later) AND
   LGPL-2.0-or-later AND (LGPL-2.1-only AND LGPL-2.1-only) AND ((LGPL-2.1-only AND LGPL-2.1-only)
   AND BSD-3-Clause) AND MIT AND (X11 AND LicenseRef-scancode-public-domain) AND MIT AND BSD-2-Clause
