--- a/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/g/golang-1.11/stable_copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-2019-11-15/main/g/golang-1.11/stable_copyright-detailed.expected.yml
@@ -34,9 +34,10 @@ other_license_expression_spdx: (BSD-3-Clause AND LicenseRef-scancode-google-pate
   AND MIT AND (BSD-3-Clause AND LicenseRef-scancode-google-patent-license-golang) AND (BSD-3-Clause
   AND LicenseRef-scancode-google-patent-license-golang) AND (BSD-3-Clause AND LicenseRef-scancode-google-patent-license-golang)
   AND BSD-2-Clause AND (BSD-3-Clause AND LicenseRef-scancode-google-patent-license-golang) AND
-  (BSD-3-Clause AND LicenseRef-scancode-google-patent-license-golang) AND SunPro AND LicenseRef-scancode-mpeg-ssg
-  AND LicenseRef-scancode-other-permissive AND (Apache-2.0 AND Apache-2.0) AND BSD-2-Clause-Views
-  AND CC-BY-3.0 AND CC-BY-3.0 AND BSD-3-Clause AND (BSD-3-Clause AND LicenseRef-scancode-google-patent-license-golang)
+  (BSD-3-Clause AND LicenseRef-scancode-google-patent-license-golang) AND LicenseRef-scancode-sunpro
+  AND LicenseRef-scancode-mpeg-ssg AND LicenseRef-scancode-other-permissive AND (Apache-2.0
+  AND Apache-2.0) AND BSD-2-Clause-Views AND CC-BY-3.0 AND CC-BY-3.0 AND BSD-3-Clause AND (BSD-3-Clause
+  AND LicenseRef-scancode-google-patent-license-golang)
 license_detections: []
 other_license_detections:
   - license_expression: other-permissive
