--- a/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libc6/copyright-detailed.expected.yml
+++ b/tests/packagedcode/data/debian/copyright/debian-slim-2021-04-07/usr/share/doc/libc6/copyright-detailed.expected.yml
@@ -5,11 +5,12 @@ declared_license_expression: lgpl-2.1-plus AND gpl-2.0-plus AND bsd-new AND bsd-
   ietf AND bsd-new AND other-permissive AND hs-regexp AND pcre AND sunpro AND other-permissive
   AND lgpl-2.1-plus
 declared_license_expression_spdx: LGPL-2.1-or-later AND GPL-2.0-or-later AND BSD-3-Clause AND
-  BSD-3-Clause AND HPND AND ISC AND BSD-3-Clause AND CMU-Mach AND BSD-3-Clause AND BSD-3-Clause
-  AND BSD-3-Clause AND LicenseRef-scancode-inner-net-2.0 AND LGPL-2.1-or-later AND LGPL-2.1-or-later
-  AND LGPL-2.0-or-later AND LicenseRef-scancode-other-permissive AND LicenseRef-scancode-ietf
-  AND BSD-3-Clause AND LicenseRef-scancode-other-permissive AND Spencer-94 AND LicenseRef-scancode-pcre
-  AND SunPro AND LicenseRef-scancode-other-permissive AND LGPL-2.1-or-later
+  BSD-3-Clause AND HPND AND ISC AND BSD-3-Clause AND LicenseRef-scancode-carnegie-mellon-contributors
+  AND BSD-3-Clause AND BSD-3-Clause AND BSD-3-Clause AND LicenseRef-scancode-inner-net-2.0 AND
+  LGPL-2.1-or-later AND LGPL-2.1-or-later AND LGPL-2.0-or-later AND LicenseRef-scancode-other-permissive
+  AND LicenseRef-scancode-ietf AND BSD-3-Clause AND LicenseRef-scancode-other-permissive AND
+  Spencer-94 AND LicenseRef-scancode-pcre AND LicenseRef-scancode-sunpro AND LicenseRef-scancode-other-permissive
+  AND LGPL-2.1-or-later
 other_license_expression:
 other_license_expression_spdx:
 license_detections:
