Improve copyright detections
Dot not treat solo period as NN
Allow trailing "authors" as part of copyright
Handle more case of truncated copyrights

Signed-off-by: Philippe Ombredanne <pombredanne@nexb.com>

--- a/tests/cluecode/data/authors/hdp.c.yml
+++ b/tests/cluecode/data/authors/hdp.c.yml
@@ -1,8 +1,7 @@
 what:
   - authors
   - authors_summary
-authors:
-  - Santiago Carot Nemesio
-authors_summary:
-  - value: Santiago Carot Nemesio
-    count: 1
+  - copyrights
+copyrights:
+  - Copyright (c) 2010 GSyC/LibreSoft, Universidad Rey Juan Carlos. Authors Santiago Carot Nemesio
+
