--- a/tests/cluecode/data/copyrights/chinese_char.txt.yml
+++ b/tests/cluecode/data/copyrights/chinese_char.txt.yml
@@ -5,7 +5,8 @@ what:
 copyrights:
   - Copyright (c) 2016Nian Allen
 holders:
-  - Allen
+  - 2016Nian Allen
 holders_summary:
-  - value: Allen
+  - value: 2016Nian Allen
     count: 1
+
