--- a/tests/cluecode/data/copyrights/finnish.c.yml
+++ b/tests/cluecode/data/copyrights/finnish.c.yml
@@ -3,9 +3,9 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - (c) 2018 Nordea Bank Abp, Satamaradankatu
+  - (c) 2018 Nordea Bank Abp, Satamaradankatu 5, FI-00020 NORDEA, Helsinki
 holders:
-  - Nordea Bank Abp, Satamaradankatu
+  - Nordea Bank Abp, Satamaradankatu 5, FI-00020 NORDEA, Helsinki
 holders_summary:
-  - value: Nordea Bank Abp, Satamaradankatu
+  - value: Nordea Bank Abp, Satamaradankatu 5, FI-00020 NORDEA, Helsinki
     count: 1
