--- a/tests/cluecode/data/copyrights/trailing_For-c.c.yml
+++ b/tests/cluecode/data/copyrights/trailing_For-c.c.yml
@@ -3,7 +3,7 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright . 2008 Mycom Pany, inc.
+  - Copyright 2008 Mycom Pany, inc.
   - Copyright (c) 1995-2003 Jean-loup Gailly
 holders:
   - Mycom Pany, inc.
