--- a/tests/cluecode/data/copyrights/with_dots_and_all_lowercase_on_multilines.txt.yml
+++ b/tests/cluecode/data/copyrights/with_dots_and_all_lowercase_on_multilines.txt.yml
@@ -3,7 +3,7 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright . 2008 company name, inc.
+  - Copyright 2008 company name, inc.
 holders:
   - company name, inc.
 holders_summary:
