--- a/tests/cluecode/data/copyrights/with_dots_and_all_lowercase_on_single_line.txt.yml
+++ b/tests/cluecode/data/copyrights/with_dots_and_all_lowercase_on_single_line.txt.yml
@@ -3,7 +3,7 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright . 2008 Foo Name, Inc.
+  - Copyright 2008 Foo Name, Inc.
 holders:
   - Foo Name, Inc.
 holders_summary:
