--- a/tests/cluecode/data/ics/bluetooth-glib-gthread/gthread.rc.in.yml
+++ b/tests/cluecode/data/ics/bluetooth-glib-gthread/gthread.rc.in.yml
@@ -4,12 +4,12 @@ what:
   - holders_summary
 copyrights:
   - Copyright (c) 1995-1997 Peter Mattis, Spencer Kimball and Josh MacDonald
-  - Copyright (c) 1998 Sebastian Wilhelmi
+  - Copyright (c) 1998 Sebastian Wilhelmi. Modified by the GLib Team and others
 holders:
   - Peter Mattis, Spencer Kimball and Josh MacDonald
-  - Sebastian Wilhelmi
+  - Sebastian Wilhelmi. Modified by the GLib Team and others
 holders_summary:
   - value: Peter Mattis, Spencer Kimball and Josh MacDonald
     count: 1
-  - value: Sebastian Wilhelmi
+  - value: Sebastian Wilhelmi. Modified by the GLib Team and others
     count: 1
