--- a/tests/cluecode/data/ics/chromium-chrome-browser-resources/about_credits.html.yml
+++ b/tests/cluecode/data/ics/chromium-chrome-browser-resources/about_credits.html.yml
@@ -38,7 +38,7 @@ copyrights:
   - Copyright (c) 2000, 2006 Sun Microsystems, Inc.
   - copyright (c) 1991-1998, Thomas G. Lane
   - Copyright (c) 1995-2009 International Business Machines Corporation and others
-  - (c) 1999 TaBE Project
+  - Copyrighy (c) 1999 TaBE Project
   - Copyright (c) 1999 Pai-Hsiang Hsiao
   - Copyright (c) 1999 Computer Systems and Communication Lab, Institute of Information Science,
     Academia Sinica
