--- a/tests/cluecode/data/authors/author_russ_c-c.c.yml
+++ b/tests/cluecode/data/authors/author_russ_c-c.c.yml
@@ -1,5 +1,12 @@
 what:
   - authors
   - authors_summary
-notes: these are detected as copyrights, not authors Russ Dill <Russ.Dill@asu.edu> Vladimir
-  Oleynik <dzo@simtreas.ru>
+  - copyrights
+  - holders
+copyrights:
+  - Russ Dill <Russ.Dill@asu.edu> 2001-2003
+  - Vladimir Oleynik <dzo@simtreas.ru> (c) 2003
+holders:
+  - Russ Dill
+  - Vladimir Oleynik
+notes: these are detected as copyrights, not authors
