--- a/tests/cluecode/data/copyrights/win-archive.lib.yml
+++ b/tests/cluecode/data/copyrights/win-archive.lib.yml
@@ -3,8 +3,7 @@ what:
   - holders
   - holders_summary
 copyrights:
-  - Copyright nexB and others
-  - (c) 2012
+  - Copyright nexB and others (c) 2012
 holders:
   - nexB and others
 holders_summary:
